@@ -1,8 +1,9 @@
-$NetBSD: CHANGES,v 1.45 2021/02/11 09:23:55 mrg Exp $
+$NetBSD: CHANGES,v 1.46 2021/02/27 12:36:46 mrg Exp $
 
-changes in bozohttpd 20210210:
+changes in bozohttpd 20210211:
 	o  fix various NULL derefs from malformed headers.  mostly from
 	   <emily@ingalls.rocks>.
+	o  fix memory leaks in library interface: add bozo_cleanup().
 
 changes in bozohttpd 20201014:
 	o  also set -D_GNU_SOURCE in Makefile.boot.  from
